--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 streamlit
 PyMuPDF
-pip install spacy
-python -m spacy download es_core_news_sm
-
+spacy
+es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl
