--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
-PyMuPDF
-spacy
-sumy
-transformers
-torch
-sentencepiece
+PyMuPDF==1.22.5
+spacy==3.7.2
+sumy==0.11.0
+transformers==4.41.1
+torch==2.3.0
+sentencepiece==0.1.99
 
